--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,4 +16,13 @@ body{
     z-index: 0; /* Specify a stack order in case you're using a different order for other elements */
     cursor: pointer; /* Add a pointer on hover */
   }
- 
+ .image-show{
+    width: 200px;
+    object-fit: cover;
+    height: 200px;
+    border-radius: 20px;
+ }
+ .disable{
+    pointer-events:none;
+    background:#78757582;
+    }
