fix notes,creat policy on maintenance request and perform

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,3 +26,7 @@ body{
     pointer-events:none;
     background:#78757582;
     }
+   #notifications {
+        overflow: scroll;
+        height: 400px;
+    }
